--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>B</span>
         <span>A</span>
-        <span>C</span>
-        <span>A</span>
-        <span>A</span>
+        <span>L</span>
+        <span>Q</span>
+        <span>I</span>
+        <span>S</span>
+        <span>~</span>
+        <span>~</span>
         <span>~</span>
         <span>C</span>
         <span>A</span>
@@ -22,6 +26,7 @@
         <span>T</span>
         <span>I</span>
         <span>K</span>
+        
     </div>
     <div class="description">
         <span>aku ada bunga buat kamu</span>
