--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>~</span>
+        <span>~</span>
+        <span>~</span>
         <span>B</span>
         <span>A</span>
         <span>L</span>
